--- a/random-number-sort/rust/Cargo.toml
+++ b/random-number-sort/rust/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
+rand = "~0.9"
 thousands = "0.2.0"
-itertools = "0.8.0"
 
 [profile.release]
 lto = true
